force-app/main/default/objects/Module__c/fields/Asset_Currency__c.field-meta.xml
<CustomField>
    <fullName>Asset_Currency__c</fullName>
    <label>Asset Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>