force-app/main/default/objects/Module__c/fields/Asset_Family__c.field-meta.xml
<CustomField>
    <fullName>Asset_Family__c</fullName>
    <label>Asset Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>aCloud</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
            <value>
                <fullName>Dimensions</fullName>
            </value>
            <value>
                <fullName>FocalPoint</fullName>
            </value>
            <value>
                <fullName>Goldmine</fullName>
            </value>
            <value>
                <fullName>Orchestrate</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>PeoplePlanner</fullName>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
            <value>
                <fullName>Hosting HCM</fullName>
            </value>
            <value>
                <fullName>Hosting NFP</fullName>
            </value>
            <value>
                <fullName>Hosting FMS</fullName>
            </value>
            <value>
                <fullName>Hosting SCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>