force-app/main/default/objects/Module__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Standard</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Modules</relationshipLabel>
    <relationshipName>Modules</relationshipName>
    <type>Lookup</type>
</CustomField>