force-app/main/default/objects/Module__c/fields/DNR_Date__c.field-meta.xml
<CustomField>
    <fullName>DNR_Date__c</fullName>
    <label>DNR Date</label>
    <type>DateTime</type>
</CustomField>