force-app/main/default/objects/Module__c/fields/DNR_Reason_Code_1__c.field-meta.xml
<CustomField>
    <fullName>DNR_Reason_Code_1__c</fullName>
    <label>DNR Reason Code 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>