force-app/main/default/objects/Module__c/fields/DNR_Reason_Code_2__c.field-meta.xml
<CustomField>
    <fullName>DNR_Reason_Code_2__c</fullName>
    <label>DNR Reason Code 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>