force-app/main/default/objects/Module__c/fields/Do_Not_Renew__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Renew</label>
    <type>Checkbox</type>
</CustomField>