force-app/main/default/objects/Module__c/fields/Expected_Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Warranty_End_Date__c</fullName>
    <label>Expected Warranty End Date</label>
    <type>Date</type>
</CustomField>