force-app/main/default/objects/Module__c/fields/License_Key__c.field-meta.xml
<CustomField>
    <fullName>License_Key__c</fullName>
    <label>License Key</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>