force-app/main/default/objects/Module__c/fields/Product_Code_SME__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_SME__c</fullName>
    <label>Product Code (SME)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>