force-app/main/default/objects/Module__c/fields/Product_Name_SME__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_SME__c</fullName>
    <label>Product Name (SME)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>