force-app/main/default/objects/Module__c/fields/Renewal_Price__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Price__c</fullName>
    <label>Renewal Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>