force-app/main/default/objects/Module__c/fields/Uplift_Perc__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Perc__c</fullName>
    <label>Uplift %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>