force-app/main/default/objects/Module__c/fields/Uplift_Value__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Value__c</fullName>
    <label>Uplift Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>